--- a/index.html
+++ b/index.html
@@ -3,35 +3,46 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Sonnovita</title>
-		<meta name="description" content="Web developer at Cold Stone Creamery.">
+		<meta name="description" content="Sonnovita Furniture Palette Picker">
 		<meta name="author" content="jacob debenedetto">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="format-detection" content="telephone=no">
 		<link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
         <link href="css/normalize.css" rel="stylesheet" type="text/css" />
         <link href="css/lity.min.css" rel="stylesheet" type="text/css" />
+        <link href="css/owl.carousel.min.css" rel="stylesheet" />
         <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
 	<body>
-        
+        <header>
+            <div class="owl-carousel owl-theme home">
+                <div class="slide-1">1</div>
+                <div class="slide-2">2</div>
+                <div class="slide-3">3</div>
+                <div class="slide-4">4</div>
+                <div class="slide-5">5</div>
+                <div class="slide-6">6</div>
+            </div>
+        </header>
 
         <!--construct pages with js-->
 		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-		<script type="text/javascript" src="js/lity.min.js"></script>
-		<script type="text/javascript" src="js/anime.min.js"></script>
+        <script type="text/javascript" src="js/lity.min.js"></script>
+        <script type="text/javascript" src="js/owl.carousel.min.js"></script>
+
 		<script>
+            //new Glide('.glide').mount()
             $(document).ready(function(){
-                fullscreen(null); 
-                anime.timeline().add({ targets: 'hgroup > a', scale: 1.25, rotate: 5, delay: 500, duration: 500, easing: 'easeInOutCubic'}).add({ targets: 'hgroup > a', scale: 1, rotate: 0, duration: 500, easing: 'easeInOutCubic' });
+                $('.owl-carousel').owlCarousel({
+                    animateOut: 'fadeOut',
+                    autoplay: true,
+                    autoplayTimeout: 1000,
+                    items: 1,
+                    loop: true,
+                    mouseDrag: false,
+                    touchDrag: false
+                });
             });
-            function fullscreen(name) {
-                $(name).addClass('fullscreen');
-                $('.fullscreen').css({ "min-height": $(window).height() });
-                $('body').fadeIn(1000);
-            }
-            var $resize = $(window).resize(function () { fullscreen(null); }); //Listen to Window Resize
-            $('[href*="#"]').click(function () { var href = $.attr(this, 'href'); $('html, body').animate({ scrollTop: $(href).offset().top }, 500, function () {}); return false;});
 		</script>
 	</body>
 </html>
