include basic grid

--- a/index.html
+++ b/index.html
@@ -15,205 +15,14 @@
         <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-        <nav>
-            <a class="logo">
-                <div class="icon">
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                </div>
-                <div class="text">
-                    <img src="img/logo-text.svg"/>
-                </div>
-            </a>
-            <a id="toggle-menu" aria-controls="main-nav" aria-expanded="false" aria-label="open menu" href="#">
-                <img alt="menu icon" src="img/menu-icon.svg">
-            </a>
-            <ul id="main-nav" aria-expanded="false" role="navigation" aria-label="main nav">
-                <li><a href="solutions.html">The Solution</a></li>
-                <li><a href="solutions.html">Color Schemes</a></li>
-                <li><a href="solutions.html">Contact Us</a></li>
-            </ul>
-        </nav>
-
-        <header>
-            <div class="owl-carousel owl-theme home">
-                <div class="slide-1"></div>
-                <div class="slide-2"></div>
-                <div class="slide-3"></div>
-                <div class="slide-4"></div>
-                <div class="slide-5"></div>
-                <div class="slide-6"></div>
-                <div class="slide-7"></div>
-                <div class="slide-8"></div>
-                <div class="slide-8"></div>
-                <div class="slide-8"></div>
-                <div class="slide-8"></div>
-                <div class="slide-9"></div>
-                <div class="slide-10"></div>
-                <div class="slide-9"></div>
-                <div class="slide-8"></div>
-                <div class="slide-7"></div>
-                <div class="slide-6"></div>
-                <div class="slide-5"></div>
-                <div class="slide-4"></div>
-                <div class="slide-3"></div>
-                <div class="slide-2"></div>
-                <div class="slide-1"></div>
-                <div class="slide-1"></div>
-                <div class="slide-1"></div>
-                <div class="slide-1"></div>
-                <div class="slide-1"></div>
-            </div>
-            <h2>Transformative Solutions for a Deep Sleep & Sylish Life</h2>
-        </header>
-
-        <section id="mainwrap" class="create">
-            <div class="owl-carousel owl-theme palette">
-                <div class="group">
-                    <div class="headline">
-                        <p>Choose from dozens of color schemes</p>
-                        <em>Serengeti (pictured)</em>
-                    </div>
-                    <div class="items">
-                        <div class="item">
-                            <div class="tile texture serengeti-panel"><span class="name">Serengeti</span></div>
-                            <span class="category">Panel A</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture sunset-brown-panel"><span class="name">Sunset Brown</span></div>
-                            <span class="category">Panel B</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture saddle-couch"><span class="name">Saddle</span></div>
-                            <span class="category">Couch</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture mahogany-cabinet"><span class="name">Mahogany</span></div>
-                            <span class="category">Cabinet Interior</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture mica-headboard"><span class="name">Mica</span></div>
-                            <span class="category">Headboard</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="group">
-                    <div class="headline">
-                        <p>Choose from dozens of color schemes</p>
-                        <em>Black Hole (pictured)</em>
-                    </div>
-                    <div class="items">
-                        <div class="item">
-                            <div class="tile texture black-hole-panel"><span class="name">Black Hole</span></div>
-                            <span class="category">Panel A</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture carbon-panel"><span class="name">Carbon</span></div>
-                            <span class="category">Panel B</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture chocolate-couch"><span class="name">Chocolate</span></div>
-                            <span class="category">Couch</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture charcoal-cabinet"><span class="name">Charcoal</span></div>
-                            <span class="category">Cabinet Interior</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture aubergine-headboard"><span class="name">Aubergine</span></div>
-                            <span class="category">Headboard</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="group">
-                    <div class="headline">
-                        <p>Choose from dozens of color schemes</p>
-                        <em>Graphite (pictured)</em>
-                    </div>
-                    <div class="items">
-                        <div class="item">
-                            <div class="tile texture graphite-reign-panel"><span class="name">Graphite Reign</span></div>
-                            <span class="category">Panel A</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture carbon-black-panel"><span class="name">Carbon Black</span></div>
-                            <span class="category">Panel B</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture slate-couch"><span class="name">Slate</span></div>
-                            <span class="category">Couch</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture charcoal-cabinet"><span class="name">Charcoal</span></div>
-                            <span class="category">Cabinet Interior</span>
-                        </div>
-                        <div class="item">
-                            <div class="tile texture ultraviolet-headboard"><span class="name">Ultraviolet</span></div>
-                            <span class="category">Headboard</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="cta">
-                <a class="btn" href="create.html">create your own color scheme</a>
-            </div>
-        </section>
-
-        <footer>
-            <div class="links">
-                <a href="index.html" class="logo">
-                    <img src="img/logo.svg" />
-                </a>
-                <ul>
-                    <li><a href="solutions.html">The Solution</a></li>
-                    <li><a href="solutions.html">Color Schemes</a></li>
-                    <li><a href="solutions.html">Contact Us</a></li>
-                </ul>
-                <p>Copyright, Sonnovita, Scottsdale, AZ. All rights reserved.</p>
-            </div>
-        </footer>
+        <nav id="main-nav"></nav>
+        <section id="main-content"></section>
+        <footer></footer>
 
         <!--construct pages with js-->
 		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="js/lity.min.js"></script>
         <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-
-		<script>
-            //new Glide('.glide').mount()
-            $(document).ready(function(){
-                /* header carousel */
-                $('.owl-carousel.home').owlCarousel({
-                    animateOut: 'fadeOut',
-                    autoplay: true,
-                    autoplayTimeout: 750,
-                    items: 1,
-                    loop: true,
-                    mouseDrag: false,
-                    touchDrag: false,
-                    dots: false
-                });
-                /* palette carousel */
-                $('.owl-carousel.palette').owlCarousel({
-                    items: 1,
-                    loop: true,
-                    dots: false,
-                    nav: true
-                });
-
-                //toggle mobile menu
-                $('#toggle-menu').on('click', function(e){
-                    e.preventDefault();
-                    var attr = 'aria-expanded';
-                    var toggle = $(this).attr(attr) == "true" ? true : false;
-                    $(this).attr(attr, !toggle);
-                    $(this).next('ul').attr(attr, !toggle)
-                });
-
-                //animate logo on load
-                $('nav .logo').addClass('animate');
-            });
-		</script>
+        <script type="text/javascript" src="js/application.js"></script>
 	</body>
 </html>
