--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<meta name="author" content="jacob debenedetto">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="format-detection" content="telephone=no">
-		<link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
+        <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
         <link href="css/normalize.css" rel="stylesheet" type="text/css" />
         <link href="css/lity.min.css" rel="stylesheet" type="text/css" />
         <link href="css/owl.carousel.min.css" rel="stylesheet" />
