update meta data

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<title>Sonnovita</title>
-		<meta name="description" content="Sonnovita Furniture Palette Picker">
-		<meta name="author" content="jacob debenedetto">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta name="format-detection" content="telephone=no">
+        <title>Sonnovita</title>
+		<meta charset="utf-8" />
+		<meta name="description" content="Sonnovita Palette Picker" />
+		<meta name="author" content="jacob debenedetto" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+        <meta name="format-detection" content="telephone=no" />
         <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet" />
         <link href="css/normalize.css" rel="stylesheet" type="text/css" />
         <link href="css/lity.min.css" rel="stylesheet" type="text/css" />
         <link href="css/owl.carousel.min.css" rel="stylesheet" />
