add unstyled popup for emails

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<body>
         <nav id="main-nav"></nav>
         <section id="main-content"></section>
+        <section id="form"></section>
         <footer></footer>
 
         <!--construct pages with js-->
